--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -177,6 +177,7 @@ jobs:
           PESTER_CONNECTKEY: ${{ secrets.PESTER_CONNECTKEY }}
         run: |
           $env:job_group = ${{ matrix.job_group }}
+          # CUT-4958
           # Uncomment below to alternate between US and EU test environments based on run number when Connect-JCOnline supports EU region.
           # if (${{ github.run_number }} % 2 -eq 0) {
           #   Write-Host "[status] Using US Pester ENV Variables"
