continue on error in tests

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -178,6 +178,7 @@ jobs:
           PESTER_APIKEY: ${{ secrets.PESTER_APIKEY }}
           PESTER_ORGID: ${{ secrets.PESTER_ORGID }}
           PESTER_CONNECTKEY: ${{ secrets.PESTER_CONNECTKEY }}
+        continue-on-error: true
         run: |
           $env:job_group = ${{ matrix.job_group }}
           # CUT-4958
